# informatics_laboratories_7

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
appendix/: report.docx
database/: init.sql
database_gui/: __main__.py  database_tab.py  database_table_widget.py  table_widget_button.py
