[tool.poetry]
name = "database_gui"
version = "0.1.0"
description = ""
authors = ["Danil Sidoruk <danilsidoruknv@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
PyQt5 = "^5.15.7"
psycopg2-binary = "^2.9.4"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
black = "^22.10.0"
isort = "^5.10.1"
pylint = "^2.15.5"

[tool.poetry.scripts]
database_gui = "database_gui.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
